ecs-terraform/ecs-service.tf
resource "aws_ecs_service" "fastapi" {

  name = "fastapi-service"

  cluster = aws_ecs_cluster.main.id

  task_definition = aws_ecs_task_definition.app.arn

  desired_count = 1

  launch_type = "FARGATE"

  network_configuration {

    subnets = [
      aws_subnet.private.id
    ]

    security_groups = [
      aws_security_group.ecs.id
    ]

    assign_public_ip = false

  }

  load_balancer {

    target_group_arn = aws_lb_target_group.fastapi.arn

    container_name = "fastapi-container"

    container_port = 8080

  }

  depends_on = [
    aws_lb_listener.http
  ]

}
