ecs-terraform/vpc.tf
resource "aws_vpc" "main" {

  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.project}-vpc"
  }
}

resource "aws_internet_gateway" "main" {

  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.project}-igw"
  }
}

resource "aws_subnet" "public" {

  vpc_id = aws_vpc.main.id

  cidr_block = "10.10.1.0/24"

  availability_zone = "eu-west-3a"

  map_public_ip_on_launch = true


  tags = {
    Name = "${var.project}-public"
  }
}

resource "aws_subnet" "public_2" {

  vpc_id = aws_vpc.main.id

  cidr_block = "10.10.3.0/24"

  availability_zone = "eu-west-3b"

  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project}-public-2"
  }
}




resource "aws_subnet" "private" {

  vpc_id = aws_vpc.main.id

  cidr_block = "10.10.2.0/24"

  availability_zone = "eu-west-3a"


  tags = {
    Name = "${var.project}-private"
  }
}

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id

  }


  tags = {
    Name = "${var.project}-public-route"
  }
}



resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public.id

  route_table_id = aws_route_table.public.id

}

resource "aws_route_table_association" "public_2" {

  subnet_id = aws_subnet.public_2.id

  route_table_id = aws_route_table.public.id

}
